# netnovelcrawler

./: .flake8  .gitignore  LICENSE  README.md  netnovelcrawlertaskmgr.py  pyproject.toml
example/: dingdianks_example.py  hbooker_example.py  qt_tqdm.py  yeduku_example.py
netnovelcrawler/: .gitignore  __init__.py
netnovelcrawler/core/: ciweimao.py  corebase.py  crawlercorefactory.py  dingdianks_com.py  n22biqu_com.py  sfacg.py  yeduku.py
netnovelcrawler/core/crawlerengine/: __init__.py  normalhttp.py  selenium.py
netnovelcrawler/utils/: ocr_util.py  screenshot_util.py  starter_stopper.py
netnovelcrawlertaskmgr/: __init__.py  taskmgr.py  taskmgrui.py  tqdm_pyqt.py
